# ChangeLog for app-misc/cls-meta
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Nov 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -cls-meta-10.9.ebuild, cls-meta-10.9-r1.ebuild:
  Fix depends for shadow and pambase.

*cls-meta-10.9-r1 (08 Nov 2010)

  08 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cls-meta-10.9-r1.ebuild:
  Removed media-libs/svgalib from desktops

  22 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cls-meta-10.9.ebuild:
  stable cls-meta-10.9.ebuild

*cls-meta-10.9 (22 Sep 2010)

  22 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cls-meta-10.8.81.ebuild, +cls-meta-10.9.ebuild:
  new version

  24 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cls-meta-10.8.81.ebuild:
  Added app-misc/calculate-install-gui

  24 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cls-meta-10.8.81.ebuild:
  Moved chromium to cl-desktop

  24 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cls-meta-10.8.81.ebuild:
  Migrate to virtual/dhcpc

  20 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cls-meta-10.8.81.ebuild:
  Moved www-plugins/adobe-flash to cl-desktop-meta

*cls-meta-10.8.81 (13 Aug 2010)

  13 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cls-meta-10.5.83.ebuild, +cls-meta-10.8.81.ebuild:
  New version of meta-package.

*cls-meta-10.4-r1 (06 Aug 2010)

  06 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cls-meta-10.4.ebuild, +cls-meta-10.4-r1.ebuild:
  Removed net-dialup/slmodem.

  03 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cls-meta-10.5.83.ebuild:
  Changed net-misc/dhcp to net-misc/dhcpcd

  16 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -cls-meta-10.0.ebuild, -cls-meta-10.0.1.ebuild, -cls-meta-10.2-r1.ebuild,
  -cls-meta-10.3.91.ebuild:
  Remove old meta packages.

  10 Jun 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>