@@ -1,4 +1,4 @@
 EBUILD cls-meta-10.4-r1.ebuild 2988 RMD160 042f931c6c1afa6103025275446336173aa70c10 SHA1 f830308a94db322d963c22a5100c8da049a31b44 SHA256 f763b6e9b07c0344b2baf7606944e4ec55d151adc5d85e354f37d5672b2aaa30
-EBUILD cls-meta-10.9-r2.ebuild 1529 RMD160 5c8346e8b74ca22a375372966b6c52502b4425f6 SHA1 6874251ac492cbe147d5328e423a08e7930c828e SHA256 01e866d94ff091ce1d6f9731171642cd7821e800cfaa6f64cb34d10b7d1a609c
-MISC ChangeLog 2849 RMD160 1cf25f1108fdaf855ad847c0d94d86151fc5cf52 SHA1 940e98760defe0fde124299c75bb622f48430563 SHA256 9e3b0497ef3abb4f5bbe6538de32508dc052c28e8a7097a3ff8607d45704b80b
+EBUILD cls-meta-10.9-r3.ebuild 1539 RMD160 5a3092421242e5d03f3c7da41f715a4a18fdd863 SHA1 3c51204a8ce263321c6ad52d52973885e4b9fa0e SHA256 672e2904abf48c88ff558e6adea7d563b096d1350279fc749178c2a02ac832b9
+MISC ChangeLog 3034 RMD160 b36e577d1d8fd54e147faa4ff6dcfb3017e8d882 SHA1 82858c7495f2a537d48c568ca4cc2248b385dcf7 SHA256 b9d2bd378e28f411362247aa4c3b901e06987bc2ea9577c8193845478f725766
 MISC metadata.xml 257 RMD160 ba1d3308ea944e3f4e2d6c968edfc6abbc32261e SHA1 557e2138324d0aa8db3a282eeeadc88f5b061408 SHA256 6e5c9e82d9d3bdd7855fde47d4d5edaec61251e84a271bd08e64f17008d3e07a
